--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Tutoriais práticos e colaborativos que capacitam comunidades vulneráveis a enfrentar desafios ambientais com autonomia, criatividade e soluções sustentáveis.">
     <title>Reverdecer</title>
